# ka-ai-receptionist

./: .gitignore  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: appointments.py  customers.py  health.py  services.py  whatsapp.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  appointment.py  conversation_state.py  customer.py  message.py  service.py
backend/app/schemas/: appointment.py  customer.py  message.py  service.py
backend/app/services/: ai_intent_service.py  conversation_service.py  whatsapp_service.py
backend/ka_ai_receptionist_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
