[project]
name = "ka-ai-receptionist-backend"
version = "0.1.0"
description = "KA AI Receptionist backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.1",
]

[tool.uvicorn]
factory = false
